# SF-crime-analysis

./: .gitignore  README.md  pyproject.toml
module1/: Jupyter Notebook Introduction.ipynb  Module_1_Python_Assignment.ipynb
module1/.ipynb_checkpoints/: Module_1_Python_Assignment-checkpoint.ipynb
module1/Sync_Session_1-d2f893a0-61a6-4eef-ae04-2d87630ffb39/Assignment_1/: Examples.ipynb  Module_1_Python_Assignment.ipynb
module2/: Module_2_Python_Assignment.ipynb
module2/.ipynb_checkpoints/: Module_2_Python_Assignment-checkpoint.ipynb
module2/Sync_Session_2-2/Assignment_2/: Module_2_Python_Assignment.ipynb
module3/: discussion3.ipynb
module3/.ipynb_checkpoints/: Module_3_Python_Assignment-checkpoint.ipynb  discussion3-checkpoint.ipynb
module3/Sync_Session_3-2/Assignment_3/: Module_3_Python_Assignment.ipynb
module4/: EDA_Project.ipynb  cars_totals.xlsx
module4/.ipynb_checkpoints/: Module_4_Python_Assignment-checkpoint.ipynb  cars-checkpoint.json  cars-checkpoint.txt
module4/Sync_Session_4-2/Assignment_4/: Module_4_Python_Assignment.ipynb  cars.csv  cars.xlsx
module5/Sync_Session_5-2/Assignment_5/: Module_5_Python_Assignment.ipynb  open-beer-database.csv
module6/.ipynb_checkpoints/: Module_6_Python_Assignment-checkpoint.ipynb
module6/Sync_Session_6-c2081991-0c73-4b27-8d3e-c38686a0d4b2/Assignment_6/: Module_6_Python_Assignment .ipynb
module6/Sync_Session_6-c2081991-0c73-4b27-8d3e-c38686a0d4b2/Bonus_Assignment_1/: Bonus_Assignment_1.ipynb  dataset.csv
module6/Sync_Session_6-c2081991-0c73-4b27-8d3e-c38686a0d4b2/Project/: EDA_Project.ipynb
(+4 files in other folders)
