[tool.poetry]
name = "msds430"
version = "0.1.0"
description = ""
authors = ["TAKESHI SUGIYAMA <takeshi.sugiyama@hacarus.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
scikit-learn = "^1.0.2"
pandas = "1.2.0"
openpyxl = "^3.0.9"
xlrd = "1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
