[tool.poetry]
name = "msds430"
version = "0.1.0"
description = ""
authors = ["Takeshi Sugiyama <taksug229@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
plotly = "^5.7.0"
jupyter = "^1.0.0"
scikit-learn = "^1.0.2"
openpyxl = "^3.0.9"
ipykernel = "^6.13.0"
beautifulsoup4 = "^4.11.1"
textblob = "^0.17.1"
yelpapi = "^2.4.0"
folium = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
